--- a/package.json
+++ b/package.json
@@ -1,27 +1,40 @@
 {
-  "name": "discord-bot-stats",
-  "version": "1.0.0",
-  "description": "A Node.js package to have statistics graphs for your Discord Bot",
-  "main": "srx/index.ts",
-  "scripts": {
-    "test": "tsc --noEmit",
-    "compile": "tsc",
-    "watch": "tsc --watch",
-    "lint": "eslint . --ext .ts",
-    "prettier": "prettier --check **/*.ts",
+	"name": "discord-bot-stats",
+	"version": "1.0.0",
+	"description": "A Node.js package to have statistics graphs for your Discord Bot",
+	"main": "src/index.ts",
+	"scripts": {
+		"test": "tsc --noEmit",
+		"compile": "tsc",
+		"watch": "tsc --watch",
+		"lint": "eslint . --ext .ts",
+		"prettier": "prettier --check **/*.ts",
 		"check": "yarn lint && yarn prettier && yarn test",
-		"format": "prettier --write **/*.ts"
-  },
-  "repository": "https://github.com/warix8/discord-bot-stats.git",
-  "author": "Warix <39554785+warix8@users.noreply.github.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^18.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
+		"format": "prettier --write **/*.ts",
+		"typedoc": "typedoc --entryPointStrategy packages .",
+		"testcode": "tsc && node dist/tests/test.js"
+	},
+	"repository": "https://github.com/warix8/discord-bot-stats.git",
+	"author": "Warix <39554785+warix8@users.noreply.github.com>",
+	"license": "MIT",
+	"devDependencies": {
+		"@types/node": "^18.6.2",
+		"@types/node-cron": "^3.0.2",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
+		"discord.js": "^14.1.2",
+		"eslint": "^8.20.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-tsdoc": "^0.2.16",
 		"prettier": "^2.7.1",
-    "typescript": "^4.7.4"
-  }
+		"typedoc": "^0.23.9",
+		"typescript": "^4.7.4"
+	},
+	"dependencies": {
+		"chart.js": "^3.8.2",
+		"chartjs-node-canvas": "^4.1.6",
+		"mongoose": "^6.5.0",
+		"node-cron": "^3.0.1",
+		"uuid": "^8.3.2"
+	}
 }
