🚧 Starts to work properly

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
 	},
 	"dependencies": {
 		"chart.js": "^3.8.2",
+		"chartjs-adapter-luxon": "^1.1.0",
 		"chartjs-node-canvas": "^4.1.6",
+		"luxon": "^3.0.1",
 		"mongoose": "^6.5.0",
 		"node-cron": "^3.0.1",
 		"uuid": "^8.3.2"
