--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+	"include": ["src/**/*", "tests/**/*"],
+	"exclude": ["node_modules", "dist/**/*"],
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
@@ -14,7 +16,7 @@
 		// "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
 		// "sourceMap": true,                           /* Generates corresponding '.map' file. */
 		// "outFile": "./",                             /* Concatenate and emit output to single file. */
-		"outDir": "./dist" /* Redirect output structure to the directory. */,
+		"outDir": "dist" /* Redirect output structure to the directory. */,
 		// "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
 		// "composite": true,                           /* Enable project compilation */
 		// "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
@@ -70,6 +72,5 @@
 		/* Advanced Options */
 		// "skipLibCheck": true,                           /* Skip type checking of declaration files. */
 		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-	},
-	"include": ["src/**/*", "tests/**/*"]
+	}
 }
