--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -18,7 +18,7 @@ on:
     push:
         branches-ignore: []
     pull_request:
-        branches: [master, main, typescript]
+        branches: [master, main]
 
 ###############
 # Set the Job #
