--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["src/**/*", "tests/**/*"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist/**/*"],
 	"compilerOptions": {
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
@@ -14,7 +14,7 @@
 		// "jsx": "preserve",                           /* Specify JSX code generation: 'preserve', 'react-native', 'react', 'react-jsx' or 'react-jsxdev'. */
 		"declaration": true /* Generates corresponding '.d.ts' file. */,
 		// "declarationMap": true,                      /* Generates a sourcemap for each corresponding '.d.ts' file. */
-		// "sourceMap": true,                           /* Generates corresponding '.map' file. */
+		"sourceMap": true /* Generates corresponding '.map' file. */,
 		// "outFile": "./",                             /* Concatenate and emit output to single file. */
 		"outDir": "dist" /* Redirect output structure to the directory. */,
 		// "rootDir": "./",                             /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
@@ -22,7 +22,7 @@
 		// "tsBuildInfoFile": "./",                     /* Specify file to store incremental compilation information */
 		// "removeComments": true,                      /* Do not emit comments to output. */
 		// "noEmit": true,                              /* Do not emit outputs. */
-		// "importHelpers": true,                       /* Import emit helpers from 'tslib'. */
+		"importHelpers": true /* Import emit helpers from 'tslib'. */,
 		// "downlevelIteration": true,                  /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
 		// "isolatedModules": true,                     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
@@ -71,6 +71,7 @@
 
 		/* Advanced Options */
 		// "skipLibCheck": true,                           /* Skip type checking of declaration files. */
-		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
+		"forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+		"pretty": true
 	}
 }
