--- a/.github/workflows/npm-dev-plublish.yml
+++ b/.github/workflows/npm-dev-plublish.yml
@@ -1,10 +1,8 @@
 name: Publish dev
 on:
-    push:
-        branches:
-            - main
-    pull_request:
-        branches: [main]
+    workflow_dispatch:
+    schedule:
+        - cron: "0 */6 * * *"
 
 jobs:
     npm:
