--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"check": "yarn lint && yarn prettier && yarn test",
 		"format": "prettier --write **/*.ts",
 		"typedoc": "typedoc --entryPointStrategy packages .",
+		"docs": "docgen --jsdoc jsdoc.json --source src/*.ts src/**/*.ts --custom docs/index.yml --output docs/docs.json",
 		"testcode": "tsc && node dist/tests/test.js"
 	},
 	"repository": "https://github.com/warix8/discord-bot-stats.git",
@@ -41,13 +42,19 @@
 		"eslint-plugin-tsdoc": "^0.2.16",
 		"prettier": "^2.7.1",
 		"typedoc": "^0.23.9",
+		"typedoc-plugin-missing-exports": "^0.23.0",
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
+		"@babel/core": "^7.18.10",
+		"@babel/preset-env": "^7.18.10",
+		"@babel/preset-typescript": "^7.18.6",
+		"@devsnowflake/docgen": "devsnowflake/docgen#ts-patch",
 		"chart.js": "^3.8.2",
 		"chartjs-adapter-date-fns": "^2.0.0",
 		"chartjs-node-canvas": "^4.1.6",
 		"date-fns": "^2.29.1",
+		"jsdoc-babel": "^0.5.0",
 		"mongoose": "^6.5.0",
 		"node-cron": "^3.0.1",
 		"uuid": "^8.3.2"
