--- a/.github/workflows/npm-dev-plublish.yml
+++ b/.github/workflows/npm-dev-plublish.yml
@@ -34,8 +34,10 @@ jobs:
               run: |
                   #! /bin/bash
                   VERSION=$(yarn info discord-bot-stats@dev dist-tags.dev)
+                  NEW_VERSION=$(jq --raw-output '.version' package.json)-dev.$(git rev-parse --short HEAD)
                   echo $VERSION
-                  if [ $VERSION = $(jq --raw-output '.version' package.json)-dev.$(git rev-parse --short HEAD) ]; then
+                  echo $NEW_VERSION
+                  if [ $VERSION = $NEW_VERSION ]; then
                       echo "Already up to date"
                   else
                       echo "Publishing new dev version."
