--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
+		"@favware/npm-deprecate": "^1.0.5",
 		"chart.js": "^3.8.2",
 		"chartjs-adapter-date-fns": "^2.0.0",
 		"chartjs-node-canvas": "^4.1.6",
