--- a/.github/workflows/npm-dev-plublish.yml
+++ b/.github/workflows/npm-dev-plublish.yml
@@ -41,7 +41,7 @@ jobs:
                       echo "Already up to date"
                   else
                       echo "Publishing new dev version."
-                      yarn npm-deprecate --name "*dev*" --package discord-bot-stats@dev --message "This is an old development version."
+                      yarn npm-deprecate --name "*dev*" --package discord-bot-stats --message "This is an old development version."
                       yarn build
                       yarn version --no-git-tag-version --new-version $(jq --raw-output '.version' package.json)-dev.$(git rev-parse --short HEAD)
                       yarn publish --tag dev || true
