--- a/.github/workflows/npm-dev-plublish.yml
+++ b/.github/workflows/npm-dev-plublish.yml
@@ -1,8 +1,8 @@
 name: Publish dev
 on:
-    push:
-        branches:
-            - main
+  workflow_dispatch:
+  schedule:
+    - cron: '0 */12 * * *'
 
 jobs:
     npm:
