--- a/.github/workflows/npm-dev-plublish.yml
+++ b/.github/workflows/npm-dev-plublish.yml
@@ -33,7 +33,7 @@ jobs:
             - name: Publish
               run: |
                   #! /bin/bash
-                  VERSION=$(yarn info discord-bot-stats@dev dist-tags.dev)
+                  VERSION=$(yarn info --silent discord-bot-stats@dev dist-tags.dev)
                   NEW_VERSION=$(jq --raw-output '.version' package.json)-dev.$(git rev-parse --short HEAD)
                   echo $VERSION
                   echo $NEW_VERSION
